@@ -1,0 +1,1 @@
+device(waveform, CONSTANT, devBLDMCastWfRecv, "BLD Data Receiver")
